tests/fa/errors/repeat_not_number_fa.salam
// EXPECT: خطا۰۶۳
// LANG: fa
تابع اصلی:
    تکرار "سه":
        چاپ "x"
    پایان
پایان
